# YouTubeTLDR

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  flake.nix  testName.js  testSubtitles.js
.cargo/: config.toml
.github/workflows/: release.yml
src/: gemini.rs  main.rs  markdown_test.md  subtitle.rs
src/gemini/: ask.rs  error.rs  mod.rs
src/gemini/types/: request.rs  response.rs  sessions.rs
static/: index.html  script.js  script.min.js  style.css  style.min.css
