cargo-features = ["trim-paths"]

[package]
name = "YouTubeTLDR"
version = "1.0.0"
edition = "2024"
readme = "README.md"
license = "MIT"

[dependencies]
minreq = { version = "2.14", features = ["json-using-serde", "https-native"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
html-escape = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
trim-paths = "all"

[profile.dev]
opt-level = 1
incremental = true
