cargo-features = ["trim-paths"]

[package]
name = "YouTubeTLDR"
version = "1.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"

[dependencies]
minreq = { version = "2.14", features = ["json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[features]
default = ["native-tls"]
native-tls = ["minreq/https-native"]
rustls-tls = ["minreq/https-rustls"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
trim-paths = "all"

[profile.dev]
opt-level = 1
incremental = true